--- a/bitcoin-information/developer-tools.html
+++ b/bitcoin-information/developer-tools.html
@@ -141,6 +141,7 @@
             <li><a href="https://github.com/rsbondi/nodes-debug" title="RPC GUI" target="_blank" rel="noopener">RPC GUI tool</a></li>
             <li><a href="https://jlopp.github.io/bitcoin-transaction-size-calculator/" target="_blank">Transaction Size Calculator</a></li>
             <li><a href="https://github.com/JeanLucPons/VanitySearch" title="Vanity Addresses" target="_blank" rel="noopener">Vanity Address Generator</a></li>
+            <li><a href="https://github.com/sashmaaan/VanityAddressMerger" title="Split-key merging" target="_blank" rel="noopener">VanityAddressMerger - Split-key merging</a></li>
             <li><a href="https://github.com/jlopp/xpub-converter" title="xpub converter" target="_blank" rel="noopener">xpub Version Converter</a></li>
           </ul>
         </div>
